force-app/src/objects/c2g__codaMatchingReference__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpmatchingreference</customHelpPage>
    <description>An internal object that provides an automatically incrementing number for the cash matching and undo matching reference.</description>
    <fields>
        <fullName>c2g__ArchiveSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Archive Set</label>
        <referenceTo>c2g__ArchiveSet__c</referenceTo>
        <relationshipLabel>Matching References</relationshipLabel>
        <relationshipName>MatchingReferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Cancel Payments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Matching References</relationshipLabel>
        <relationshipName>MatchingReferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Number</label>
        <referenceTo>c2g__codaPayment__c</referenceTo>
        <relationshipLabel>Matching References</relationshipLabel>
        <relationshipName>MatchingReferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <label>Matching Reference</label>
    <listViews>
        <fullName>FF_Council_of_International_Schools_Inc_codaMatchingReference</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools, Inc</label>
        <queue>FF_Council_of_International_Schools_Inc</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_codaMatchingReference</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools</label>
        <queue>FF_Council_of_International_Schools</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Matching Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matching References</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>